Fixed issue where subtitles overlap the input box

--- a/chrome-extension/style.css
+++ b/chrome-extension/style.css
@@ -49,3 +49,7 @@
 #izl-cw .chat-item.owner-system, #izl-cw .chat-item.owner-system .screen-name {
     color: #faa;
 }
+
+.izl_izleminated .jwcaptions {
+    width: 80%;
+}
